# Novel-Athanor-v2

./: .gitignore  CHANGELOG.md  CHEATSHEET.md  CLAUDE.md  DEVELOPMENT_PLAN_SNAPSHOT.md  README.md  README_en.md  SESSION_STATE.md  procedure.md  pyproject.toml
.claude/: CHEATSHEET.md  current-phase.md  settings.json  settings.local.json
.claude/agents/: code-reviewer.md  design-architect.md  doc-writer.md  ghost-writer.md  quality-agent.md  quality-auditor.md  requirement-analyst.md  reviewer.md  style-agent.md  task-decomposer.md  tdd-developer.md  test-runner.md
.claude/commands/: adr-create.md  analyze-style.md  auditing.md  building.md  daily.md  draft-scene.md  focus.md  full-load.md  full-review.md  full-save.md  impact-analysis.md  pattern-review.md  planning.md  project-status.md  quick-load.md  quick-save.md  retro.md  security-review.md  ship.md  wave-plan.md
.claude/hooks/: _hook_utils.py  lam-stop-hook.py  post-tool-use.py  pre-compact.py  pre-tool-use.py
.claude/rules/: audit-fix-policy.md  building-checklist.md  core-identity.md  decision-making.md  model-selection.md  permission-levels.md  phase-auditing.md  phase-building.md  phase-planning.md  phase-rules.md  security-commands.md  self-modification.md
.claude/states/: novel-generator.json
.exchange/: README.md
.exchange/sessions/: 2026-01-24_001_analysis-antigravity-architecture.md  2026-01-24_001_architecture.md  2026-01-24_002_review-request-specs-v2.md  2026-01-24_002_review-response-specs-v2.md  (+20 more)
.serena/: project.yml
src/: __init__.py
tests/: __init__.py  test_sample.py
(+341 files in other folders)
